--- a/Assignment 2 - Create Table.ipynb
+++ b/Assignment 2 - Create Table.ipynb
@@ -190,22 +190,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Drop unassigned Boroughs\n",
+    "# Step A: Drop unassigned Boroughs\n",
     "mask = table_data['Borough'] == 'Not assigned'\n",
-    "step1 = table_data[~mask]\n",
+    "stepA = table_data[~mask]\n",
     "\n",
-    "# Step 2: Expand Neighbourhood column\n",
-    "step2 = pd.concat([step1, step1['Neighbourhood'].str.split(',', expand=True)], axis=1)\n",
-    "step2.drop('Neighbourhood', inplace=True, axis=1)\n",
+    "# Step B: Expand Neighbourhood column\n",
+    "# stepB = pd.concat([stepB, stepB['Neighbourhood'].str.split(',', expand=True)], axis=1)\n",
+    "# stepB.drop('Neighbourhood', inplace=True, axis=1)\n",
     "\n",
-    "# Step 3: Re-assign Postal code and Borough to Neighbourhoods\n",
-    "step3 = step2.melt(id_vars=['Postal Code', 'Borough'], value_name='Neighbourhood', value_vars=[0, 1, 2, 3, 4, 5, 6, 7])\n",
-    "step3.drop('variable', axis=1, inplace=True)\n",
+    "# Step C: Re-assign Postal code and Borough to Neighbourhoods\n",
+    "# stepC = stepB.melt(id_vars=['Postal Code', 'Borough'], value_name='Neighbourhood', value_vars=[0, 1, 2, 3, 4, 5, 6, 7])\n",
+    "# stepC.drop('variable', axis=1, inplace=True)\n",
     "\n",
-    "# Step 4: Drop rows with empty values\n",
-    "step4 = step3.dropna()\n",
-    "step4.reset_index(drop=True, inplace=True)\n",
-    "cleaned_df = step4"
+    "# Step D: Drop any rows with empty values\n",
+    "stepD = stepA.dropna()\n",
+    "stepD.reset_index(drop=True, inplace=True)\n",
+    "cleaned_df = stepD"
    ]
   },
   {
@@ -256,31 +256,31 @@
        "      <th>2</th>\n",
        "      <td>M5A</td>\n",
        "      <td>Downtown Toronto</td>\n",
-       "      <td>Regent Park</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>M6A</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Lawrence Manor</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>M7A</td>\n",
        "      <td>Downtown Toronto</td>\n",
-       "      <td>Queen's Park</td>\n",
+       "      <td>Queen's Park, Ontario Provincial Government</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Postal Code           Borough     Neighbourhood\n",
-       "0         M3A        North York         Parkwoods\n",
-       "1         M4A        North York  Victoria Village\n",
-       "2         M5A  Downtown Toronto       Regent Park\n",
-       "3         M6A        North York    Lawrence Manor\n",
-       "4         M7A  Downtown Toronto      Queen's Park"
+       "  Postal Code           Borough                                Neighbourhood\n",
+       "0         M3A        North York                                    Parkwoods\n",
+       "1         M4A        North York                             Victoria Village\n",
+       "2         M5A  Downtown Toronto                    Regent Park, Harbourfront\n",
+       "3         M6A        North York             Lawrence Manor, Lawrence Heights\n",
+       "4         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
       ]
      },
      "execution_count": 6,
@@ -301,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The table has 217 rows and 3 columns\n"
+      "The table has 103 rows and 3 columns\n"
      ]
     }
    ],
