--- a/Assignment 3 - Add GeoData.ipynb
+++ b/Assignment 3 - Add GeoData.ipynb
@@ -195,7 +195,7 @@
     "stepA = table_data[~mask]\n",
     "\n",
     "# Step B: Expand Neighbourhood column\n",
-    "# stepB = pd.concat([stepB, stepB['Neighbourhood'].str.split(',', expand=True)], axis=1)\n",
+    "# stepB = pd.concat([stepA, stepA['Neighbourhood'].str.split(',', expand=True)], axis=1)\n",
     "# stepB.drop('Neighbourhood', inplace=True, axis=1)\n",
     "\n",
     "# Step C: Re-assign Postal code and Borough to Neighbourhoods\n",
